--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.19.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
